--- a/CISC3610/PWATesting/manifest.json
+++ b/CISC3610/PWATesting/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/CISC3610/PWATesting/",
+  "start_url": "./",
   "background_color": "#3367D6",
   "display": "standalone",
   "theme_color": "#3367D6",
