--- a/CISC3610/PWA/manifest.json
+++ b/CISC3610/PWA/manifest.json
@@ -1,27 +1,21 @@
-
 {
-    "name":"PWA Conversion App",
-    "short_name":"PWA",
-    
-    "description":"This is a PWA App",
-    "id": "v1.04",
-    "icons":[
-      {
-      "src":"icon-192x192.png",                      
-      "sizes":"192x192",
-      "type":"image/png"
-      },
-      {
-        "src":"icon-512x512.png",                      
-        "sizes":"512x512",
-        "type":"image/png"
-      }
-      
-    ],
-    "start_url":"/~goetz/cisc3610/pwa",
-    "display":"standalone",
-    "background_color":"#3367D6",
-    "theme_color":"#3367D6"
-
-
+  "short_name": "Temperature PWA",
+  "name": "Temperature PWA",
+  "icons": [
+    {
+      "src": "icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": "./",
+  "background_color": "#3367D6",
+  "display": "standalone",
+  "theme_color": "#3367D6",
+  "id": "v1.04"
 }
